--- a/motherload.css
+++ b/motherload.css
@@ -144,6 +144,9 @@
     width: 95vw;
     background-image: url(img/store-inside.jpg);
     background-size: cover;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 
   .test {
@@ -155,15 +158,21 @@
 
   .store-option {
     color: rgb(0, 105, 105);
-    width: 65vw;
-    height: 5vh;
+    width: 10vw;
+    height: 10vh;
     background-color: rgb(122, 253, 253);
     margin: auto;
-    margin-top: 3vh;
-    padding-top: 2vh;
-    justify-content: center;
+    padding: 2vh;
+    justify-content: space-between;
     display: flex;
+    flex-direction: column;
     transition: 0.2s all;
+  }
+
+  .store-option-text {
+    display: flex;
+    justify-content: center;
+    text-align: center;
   }
 
   .store-clickable:hover {
@@ -171,7 +180,6 @@
     border: 1px dashed rgb(0, 147, 147);
     
     cursor: pointer;
-    font-size: 140%;
   }
 
   .return-to-map {
