--- a/motherload.css
+++ b/motherload.css
@@ -156,7 +156,7 @@
     background-color: red;
   }
 
-  .store-option {
+  .store-option, .next-level-option {
     color: rgb(0, 105, 105);
     width: 10vw;
     height: 10vh;
@@ -167,6 +167,11 @@
     display: flex;
     flex-direction: column;
     transition: 0.2s all;
+  }
+
+  .next-level-option {
+    height: 20vh;
+    width: 15vw;
   }
 
   .store-option-text {
