--- a/motherload.css
+++ b/motherload.css
@@ -201,7 +201,7 @@
     width: 10vw;
     height: 10vh;
     background-color: rgb(122, 253, 253);
-    margin: auto;
+    margin: 2vw;
     padding: 2vh;
     justify-content: space-between;
     display: flex;
@@ -292,8 +292,9 @@
 
   .store-clickable:hover {
     background-color: rgb(2, 196, 196);
-    border: 4px solid rgb(0, 147, 147);
+    border: 6px solid rgb(0, 147, 147);
     height: 9vh;
+    width: 9vw;
     cursor: pointer;
   }
 
