--- a/motherload.css
+++ b/motherload.css
@@ -375,6 +375,6 @@
   }
 
   .exploding-block {
-    background-color: rgb(255, 202, 188)
+    background: linear-gradient(black 40%, red, black 80%)
   }
  
