--- a/motherload.css
+++ b/motherload.css
@@ -191,13 +191,14 @@
   #bomb-timer-popup, #money-dirt-popup  {
     display: none;
     position: absolute;
-    top: 10%;
+    top: 15vh;
     left: 70%;
-    z-index: 100;
+    z-index: 2;
     width: 20vw;
     height: 10vh;
     font-size: 3vmin;
     background-color: #f9f9f9;
+    pointer-events: none;
     color: black;
     border: 1px solid #ccc;
 }
