--- a/motherload.css
+++ b/motherload.css
@@ -18,7 +18,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: white;
+    background-color: rgba(255, 237, 220, 0.967);
     z-index: 10;
   }
 
@@ -32,9 +32,27 @@
     z-index: 10;
   }
 
+.all-weapons-div {
+  display: flex;
+  flex-direction: column;
+  width: 24vw;
+  height: 8vh;
+  margin-top: 1vh;
+  background-color: rgba(216, 108, 108, 0.668);
+  background: repeating-linear-gradient(
+    135deg,
+    #d5717173 0%,
+    #d5717173 5%,
+    #d15e5e55 5%,
+    #d15e5e55 10%
+  );
+  border: 1vh dashed rgba(90, 0, 0, 0.737);
+}
+
 .weapons-div {
   display: flex;
   flex-direction: row;
+  margin-left: 1vw;
 }
 
   .map-square {
@@ -49,13 +67,13 @@
     flex-direction: row;
     align-items: center;
     justify-content: right;
-    width: 25vw;
+    width: 27vw;
   }
 
   .level-div {
     background-color: rgb(208, 205, 205);
     border: 0.5vh solid grey;
-    width: 6vw;
+    width: 5vw;
     height: 4vh;
     margin-top: 4vh;
   }
@@ -65,7 +83,7 @@
   }
 
   .bars-div {
-    width: 25vw;
+    width: 27vw;
     height: 10vh;
     margin-top: 0.5vh;
     padding-left: 0.5vw;
@@ -264,8 +282,8 @@
   .relic-div, .relics-div {
     display: flex;
     flex-direction: row;
-    height: 10vh;
-    width: 8vw;
+    height: 6vh;
+    width: 4vw;
     justify-content: center;
   }
 
@@ -295,6 +313,16 @@
     pointer-events: none;
     color: black;
     border: 1px solid #ccc;
+}
+
+.dirt-div {
+  background-color: rgba(93, 53, 31, 0.849);
+  height: 8vh;
+  width: 8vw;
+  margin-top: 1.7vh;
+  color: white;
+  border: 0.3vh dashed rgb(207, 167, 127);
+  background: linear-gradient(to right, rgb(123, 67, 11) 0%, rgb(148, 88, 28) 20%, rgb(123, 72, 21) 40%, rgb(91, 52, 12) 70%, rgb(131, 76, 22) 79%, rgb(123, 72, 21) 80%, rgb(123, 72, 21) );
 }
 
 .store-img, .exit-img {
@@ -398,6 +426,14 @@ body:has(#store-fuel-div:hover) #empty-fuel-bar {
   background-color: rgba(197, 185, 16, 0.6);
 }
 
+body:has(#store-fuel-div:hover) #current-fuel-bar {
+  animation: flash 1s infinite;
+}
+
+#store-fuel-div {
+  background-color: rgb(249, 170, 1);
+}
+
 #max-fuel-text {
   transition: 0.5s all
 }
@@ -428,7 +464,7 @@ body:has(#store-fuel-upgrade-div:hover) #max-fuel-text {
 
 @keyframes flash {
   0% {opacity: 1;}
-  100% {opacity: 0.5};
+  100% {opacity: 0.1};
 }
 
   .enemy-img {
@@ -518,12 +554,12 @@ body:has(#store-fuel-upgrade-div:hover) #max-fuel-text {
 
   #cash-div {
     height: 8vh;
-    width: 6vw;
+    width: 5vw;
     background-color: green;
     color: rgb(0, 84, 6);
     margin-top: 1vh;
     font-size: 3vh;
-    border: 1vh dotted white;
+    border: 1vh dashed rgba(255, 237, 220, 0.967);
     background: linear-gradient(to right, rgb(50, 201, 50) 0%, rgb(108, 238, 108) 20%, rgb(113, 232, 113) 40%, rgb(151, 238, 151) 70%, rgb(159, 245, 159) 75%, rgb(59, 216, 59));
     font-family: Impact, Haettenschweiler, 'Arial Narrow', sans-serif;
   }
