--- a/motherload.css
+++ b/motherload.css
@@ -28,7 +28,7 @@
     justify-content: space-evenly;
     height: 11vh;
     margin: 0.5vh 0vh;
-    background-color: white;
+    background-color: rgba(255, 237, 220, 0.967);
     z-index: 10;
   }
 
@@ -285,6 +285,7 @@
     height: 6vh;
     width: 4vw;
     justify-content: center;
+    align-items: center;
   }
 
   .relics-div {
@@ -481,6 +482,10 @@ body:has(#store-fuel-upgrade-div:hover) #max-fuel-text {
   .relic {
     background-color: pink;
     color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .store-div {
