--- a/motherload.css
+++ b/motherload.css
@@ -304,7 +304,8 @@
   #weapons-price-popup, #thorns-popup, #enemy-damage-popup, 
   #enemy-damage-fuel-popup, #kill-enemies-fuel-popup, #dirt-fuel-popup,
   #bomb-timer-popup, #money-dirt-popup, #laser-piercing-popup, #kill-enemies-heal-popup,
-  #bronze-silver-popup, #kill-enemies-money-popup {
+  #bronze-silver-popup, #kill-enemies-money-popup, #pacifist-popup, #cheaper-shops-popup,
+  #splinter-cell-popup, #oil-well-popup, #silver-heal-popup, #bronze-fuel-popup {
     display: none;
     position: absolute;
     top: 15vh;
